# nautilus-new-file

./: CMakeLists.txt  Makefile  README.md  nautilus-new-file.py  new-file.py
setup/: install  uninstall
